--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,3 +533,84 @@ html{
 {
     color:rgba(0, 0, 0, 0.6);
 }
+
+#toast{
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    z-index: 9999999; /*để nổi lên ở thành lớp cao nhất*/
+}
+.toast{
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding: 5px 0;
+    border-radius: 2px;
+    min-width: 400px;
+    max-width: 450px;
+    border-left: 4px solid ;
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.08);
+    transition: all linear 0.3s;
+}
+
+@keyframes slideinleft {
+    from
+    {
+        opacity: 0;
+        transform: translateX(calc(100% + 32px));
+    }
+    to
+    {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOut
+{
+    to 
+    {
+        opacity: 0;
+    }
+}
+
+.toast + .toast{
+    margin-top: 24px;
+}
+
+.toast__icon{
+    font-size: 24px;
+}
+.toast__close, .toast__icon{
+    padding: 0 16px;
+}
+.toast__body{
+    flex-grow: 1;
+}
+.toast__title{
+    font-weight: 600;
+    margin-top: 8px;
+    margin-bottom: 0;
+    color:#333;
+}
+.toast__msg{
+    margin-bottom: 10px;
+    margin-top: 0;
+    color:#888;
+    line-height: 1.5;
+}
+
+.toast__close{
+    font-size: 20px;
+    color:rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+}
+
+.toast--success {
+    border-color:#47d864 ;
+}
+
+.toast--success .toast__icon{
+    color: #47d864;
+}
+
